# project-tracker

./: .coveragerc  .dockerignore  .env.local.example  .env.prod.sample  .env.sample  .flake8  .gitignore  AGENTS.md  Dockerfile  Pipfile  README.md  code_of_conduct.md  coverage.json  coverage.xml  dev_psql.sh  docker-compose.prod.override.local-ssl.yml  docker-compose.prod.override.nginx.yml  docker-compose.prod.override.yml  docker-compose.prod.yml  docker-compose.yml  index.html  pyproject.toml  pytest.ini
.github/workflows/: test.yml
doc/: README.md  contributing.md  development.md  production.md  project_structure.md  setup.md
doc/coverage/: coverage.json  coverage.xml
doc/coverage/html/: class_index.html  function_index.html  index.html  status.json  z_0ac68be63614e227_component_form_py.html  z_0ac68be63614e227_new_component_form_py.html  z_10fae538ba4e8521_admin_py.html  z_10fae538ba4e8521_apps_py.html  z_10fae538ba4e8521_urls_py.html  z_11195fb0f541c838_process_individual_subscription_expiration_py.html  z_11195fb0f541c838_process_invite_expiration_py.html  z_11195fb0f541c838_process_organization_invite_expiration_py.html  z_11195fb0f541c838_process_organization_subscription_expiration_py.html  z_11195fb0f541c838_send_organization_invite_py.html  z_14a30dbb2d7cee6b_check_project_label_availability_form_py.html  z_14a30dbb2d7cee6b_new_project_form_py.html  z_14a30dbb2d7cee6b_project_form_py.html  z_1ff0e79755c87889_admin_py.html  z_1ff0e79755c87889_apps_py.html  z_29be66d85bb74d1b_issue_form_py.html  z_29be66d85bb74d1b_new_issue_form_py.html  z_40fcd119de53121b_git_repositories_view_py.html  z_40fcd119de53121b_git_repository_view_py.html  z_40fcd119de53121b_new_git_repository_view_py.html  z_4b2289dedffbea4f_test_send_organization_invite_py.html  z_4b280d37797842cc_git_repository_form_py.html  z_4b280d37797842cc_new_git_repository_form_py.html  z_5447216e0edb80cf_test_individual_py.html  z_5447216e0edb80cf_test_organization_py.html  z_57760688d1f824db_admin_py.html  z_57760688d1f824db_apps_py.html  z_57760688d1f824db_util_py.html  z_6a8d09bfa66bc2b9_celery_py.html  z_6a8d09bfa66bc2b9_urls_py.html  z_6c9df3aba9093bde_new_version_form_py.html  z_6c9df3aba9093bde_version_form_py.html  z_73e8a6b9a3e1c0d3_apps_py.html  z_73e8a6b9a3e1c0d3_urls_py.html  z_815040e1776f894e_login_form_py.html  z_815040e1776f894e_signup_form_py.html  (+60 more)
doc/features/: subscriptions.md
docker/django/: ensure-db.sh
docker/nginx/: prod-ssl.conf  prod.conf
docker/postgres/: init-db.sh
tracker/: .coveragerc  env.sample  manage.py  pytest.ini
tracker/api/: urls.py
tracker/api/serializers/: core.py  core_user.py  organization.py  project.py  serializers.py  user.py
tracker/api/tests/: test_api.py
tracker/api/views/: api.py  core_user.py  organization.py  project.py  user.py
tracker/core/: util.py
tracker/core/migrations/: 0001_initial.py  0002_initial.py  0003_coreuserdata_middle_name_coreuserdata_name_prefix_and_more.py
tracker/core/models/: __init__.py  core.py  organization.py  organization_invites.py  user.py
tracker/doc/: development.md  setup.md
tracker/frontend/: urls.py
tracker/tracker/: __init__.py  celery.py  settings.py  urls.py
(+274 files in other folders)
