[project]
name = ""
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "celery==5.4.0",
    "django>=5.2",
    "django-app-metrics",
    "django-celery",
    "django-coverage",
    "django-filter",
    "django-extensions",
    "django-health-check",
    "django-htmx",
    "django-phone-field",
    "djangorestframework",
    "markdown",
    "pytz",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-django",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-instrumentation-sqlite3",
    "opentelemetry-exporter-otlp",
    "psycopg2",
]

[dependency-groups]
dev = [
    "ipdb",
    "ipykernel",
    "ipython>=8.26.0",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "opentelemetry-exporter-otlp-proto-http",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
