[project]
name = "project-tracker"
version = "1.0.0"
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "celery==5.4.0",
    "django==6.0.5",
    "django-app-metrics==0.9.0",
    "django-celery==3.1.17",
    "django-celery-beat==2.9.0",
    "django-celery-results==2.6.0",
    "django-coverage==1.2.4",
    "django-environ==0.13.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-health-check==4.4.1",
    "django-htmx==1.27.0",
    "django-phone-field==1.8.1",
    "djangorestframework==3.17.1",
    "gunicorn==26.0.0",
    "markdown==3.10.2",
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-instrumentation-django==0.63b1",
    "opentelemetry-instrumentation-psycopg2==0.63b1",
    "opentelemetry-instrumentation-sqlite3==0.63b1",
    "opentelemetry-exporter-otlp==1.42.1",
    "pytz==2026.2",
    "psycopg2==2.9.12",
    "redis==8.0.0",
    "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
    "ipdb==0.13.13",
    "ipykernel==7.2.0",
    "ipython==9.14.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "opentelemetry-exporter-otlp-proto-http==1.42.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
